<resources>
    <string name="app_name">Traveloholic</string>
    <string name="title_activity_maps">Traveloholic</string>
    <string name="google_places_key"></string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Traveloholic</string>
    <string name="nav_header_subtitle">traveloholic@traveloholic.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_other">Other</string>

    <string name="menu_home">Home</string>
    <string name="menu_hospitals">Hospitals</string>
    <string name="menu_schools">Schools</string>
    <string name="menu_restaurants">Restaurants</string>
    <string name="menu_attractions">Attractions</string>
    <string name="menu_temples">Religious Places</string>
    <string name="menu_parks">Amusement Parks</string>
    <string name="menu_direction">Get Directions</string>
    <string name="menu_guide">Want to be a guide?</string>
    <string name="menu_find">Find Distance</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">About Us</string>
    <string name="menu_hotels">Hotels</string>
    <string name="menu_travel">Travel</string>


    <string name="str_rb_driving">Driving</string>
    <string name="str_rb_bicycling">BiCycling</string>
    <string name="str_rb_walking">Walking</string>


    <string name="translated_text_hint">Translated text</string>
    <string name="downloaded_models_label">Downloaded models: %1$s</string>
    <string name="translate_progress">Translating...</string>
    <string name="delete_model">Delete Model</string>
    <string name="download_model">Download Model</string>
    <string name="unknown_error">Unknown error occurred.</string>

    <string name="str_tv_distance_time">Distance</string>

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
</resources>
