<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_parent_color">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/sourceLangSelector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sourceText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="Source text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/sourceLangSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/buttonSyncSource"
        app:layout_constraintEnd_toStartOf="@id/buttonSwitchLang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:gravity="center_horizontal"/>

    <ImageButton
        android:id="@+id/buttonSwitchLang"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_compare_arrows_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/targetLangSelector"
        app:layout_constraintStart_toEndOf="@+id/sourceLangSelector"
        app:layout_constraintTop_toTopOf="@id/sourceLangSelector"
        android:background="@drawable/mybutton"
        android:backgroundTint="@color/white"/>

    <Spinner
        android:id="@+id/targetLangSelector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/sourceLangSelector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSwitchLang"
        app:layout_constraintTop_toTopOf="@id/sourceLangSelector"
        android:gravity="center_horizontal" />

    <ToggleButton
        android:id="@+id/buttonSyncSource"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textOff="@string/download_model"
        android:textOn="@string/delete_model"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/downloadedModels"
        app:layout_constraintEnd_toEndOf="@+id/sourceLangSelector"
        app:layout_constraintStart_toStartOf="@id/sourceLangSelector"
        app:layout_constraintTop_toBottomOf="@id/sourceLangSelector"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/mybutton"
        android:backgroundTint="@color/white"/>

    <ToggleButton
        android:id="@+id/buttonSyncTarget"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textOff="@string/download_model"
        android:textOn="@string/delete_model"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/buttonSyncSource"
        app:layout_constraintEnd_toEndOf="@id/targetLangSelector"
        app:layout_constraintStart_toStartOf="@id/targetLangSelector"
        app:layout_constraintTop_toTopOf="@id/buttonSyncSource"
        android:background="@drawable/mybutton"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/downloadedModels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/downloaded_models_label"
        app:layout_constraintBottom_toTopOf="@id/targetText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSyncSource"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/targetText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="top"
        android:hint="@string/translated_text_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadedModels"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>