<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuideRegister"
    android:background="@drawable/bg_parent_color"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="10dp"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/card_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/bg_card"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="Enter Your Full Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="Enter Your Contact Number"
                android:inputType="number" />

            <EditText
                android:id="@+id/editAlternateNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="Enter Your Alternate Contact Number"
                android:inputType="number" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="Enter Your Permanent Residential Address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="Enter Your Age"
                android:inputType="number" />

        <EditText
            android:id="@+id/editDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Enter Your Date Of Birth"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Gender:"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_male"
                        android:onClick="onClick"/>

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_female"
                        android:onClick="onClick"/>

                    <RadioButton
                        android:id="@+id/radioOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_other"
                        android:onClick="onClick"/>
                </LinearLayout>

            </RadioGroup>

        <LinearLayout
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPickImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/bg_parent_color"
                android:text="Pick Image"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/statustxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="No image picked"/>
        </LinearLayout>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="Enter email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="Enter password"
                android:inputType="textPassword" />

    </LinearLayout>
    </ScrollView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/mybutton"
        android:backgroundTint="@color/browser_actions_bg_grey"
        android:text="Signup"
        android:elevation="20dp"/>

    <TextView
        android:text="Already Registered? Signin Here"
        android:id="@+id/textViewSignin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>